qa fix for section landing page box title wrapping

--- a/cms/assets/css/cms-styles.css
+++ b/cms/assets/css/cms-styles.css
@@ -279,6 +279,7 @@ div[id*=image-] {
 }
 #section-boxes .section-box {
   height: 100%;
+  position: relative;
 }
 #section-boxes .section-box.left, #section-boxes .section-box.right {
   width: 50%;
